# bin-parser

./: .gitignore  .gitmodules  .travis.yml  LICENSE  MANIFEST.in  README.md  README.rst  package-lock.json  package.json  setup.cfg  setup.py  tox.ini
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: Bug_report.md
bin_parser/: __init__.py  bin_parser.py  cli.js  cli.py  functions.js  functions.py  index.js
docs/: CONTRIBUTING.md  LICENSE.md  PULL_REQUEST_TEMPLATE.md  credits.rst  extras.rst  index.rst  installation.rst  introduction.rst  library.rst  paper.bib  paper.md  structure.rst  types.rst  usage.rst
docs/ISSUE_TEMPLATE/: Bug_report.md
examples/balance/: parser.js  parser.py  structure.yml  types.yml
examples/colour/: structure.yml  types.yml
examples/complex_eval/: structure.yml  types.yml
examples/conditional/: structure.yml  types.yml
examples/csv/: structure.yml  test.csv  types.yml
examples/flags/: structure.yml  types.yml
examples/floatingpoint/: input.yml  parser.js  parser.py  structure.yml  structure_float.yml  types.yml
examples/lists/: structure_do_while.yml  structure_for.yml  structure_while.yml  types.yml
examples/macro/: structure.yml  structure_nested.yml  structure_plain.yml  types.yml
extras/: __init__.py  compare_yaml.py  make_skeleton.py  sync_test  test.sh
javascript/: cli.js  deprecated.js  depricated.js  functions.js  index.js
python/: __init__.py  bin_parser.py  cli.py  deprecated.py  depricated.py  functions.py
tests/: test_functions.py  test_parser.py
(+38 files in other folders)
