[metadata]
name = bin-parser
version = 1.0.1
description = General binary file parser.
long_description = file: README.rst
author = Jeroen F.J. Laros
author_email = J.F.J.Laros@lumc.nl
url = https://git.lumc.nl/j.f.j.laros/bin-parser
keywords = binary, parser, yaml, json
license = MIT
classifiers =
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Scientific/Engineering
copyright = 2015-2018

[options]
zip_safe = False
include_package_data = True
packages = bin_parser, bin_parser_extras
package_dir =
    bin_parser = python
    bin_parser_extras = extras
install_requires =
    configparser
    PyYAML

[options.entry_points]
console_scripts =
    bin_parser = bin_parser.cli:main
    compare_yaml = bin_parser_extras.compare_yaml:main
    make_skeleton = bin_parser_extras.make_skeleton:main
